--- a/index.html
+++ b/index.html
@@ -3,49 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ShopEase - Your Online Store</title>
+  <title>ShopSphere - E-Commerce Landing</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      background-color: #f9f9f9;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f4f4;
       color: #333;
     }
     header {
-      background: #2c3e50;
+      background: #1a1a1a;
       color: #fff;
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      position: sticky;
+      top: 0;
     }
-    header h1 {
-      margin: 0;
-    }
+    header h1 { margin: 0; }
     nav a {
       color: #fff;
       text-decoration: none;
       margin-left: 1rem;
     }
     .hero {
-      background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+      background: url('https://via.placeholder.com/1600x500') no-repeat center/cover;
       color: #fff;
       text-align: center;
-      padding: 5rem 2rem;
+      padding: 6rem 2rem;
     }
-    .hero h2 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
+    .hero h2 { font-size: 3rem; margin-bottom: 1rem; }
     .hero button {
       background: #e67e22;
       border: none;
       padding: 1rem 2rem;
-      font-size: 1rem;
+      font-size: 1.2rem;
       color: #fff;
       cursor: pointer;
       border-radius: 5px;
+    }
+    .categories {
+      display: flex;
+      justify-content: space-around;
+      padding: 3rem 2rem;
+      background: #fff;
+    }
+    .category {
+      text-align: center;
+    }
+    .category img {
+      width: 150px;
+      border-radius: 50%;
     }
     .products {
       display: grid;
@@ -60,16 +69,8 @@
       text-align: center;
       padding: 1rem;
     }
-    .product img {
-      max-width: 100%;
-      border-radius: 5px;
-    }
-    .product h3 {
-      margin: 1rem 0 0.5rem;
-    }
-    .product p {
-      margin: 0.5rem 0;
-    }
+    .product img { max-width: 100%; border-radius: 5px; }
+    .product h3 { margin: 1rem 0 0.5rem; }
     .product button {
       background: #27ae60;
       border: none;
@@ -78,55 +79,121 @@
       cursor: pointer;
       border-radius: 5px;
     }
+    .testimonials {
+      background: #eee;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+    .testimonial {
+      max-width: 600px;
+      margin: 1rem auto;
+      font-style: italic;
+    }
+    .newsletter {
+      background: #1a1a1a;
+      color: #fff;
+      text-align: center;
+      padding: 3rem 2rem;
+    }
+    .newsletter input[type="email"] {
+      padding: 0.7rem;
+      width: 250px;
+      border: none;
+      border-radius: 5px;
+      margin-right: 1rem;
+    }
+    .newsletter button {
+      padding: 0.7rem 1.5rem;
+      background: #e67e22;
+      border: none;
+      color: #fff;
+      border-radius: 5px;
+      cursor: pointer;
+    }
     footer {
-      background: #2c3e50;
+      background: #111;
       color: #fff;
       text-align: center;
       padding: 1rem;
-      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>ShopEase</h1>
+    <h1>ShopSphere</h1>
     <nav>
       <a href="#">Home</a>
-      <a href="#">Products</a>
-      <a href="#">About</a>
+      <a href="#">Shop</a>
+      <a href="#">Deals</a>
       <a href="#">Contact</a>
     </nav>
   </header>
 
   <section class="hero">
-    <h2>Discover Amazing Deals</h2>
-    <p>Shop the latest trends at unbeatable prices.</p>
-    <button>Shop Now</button>
+    <h2>Welcome to ShopSphere</h2>
+    <p>Your one-stop shop for everything you love.</p>
+    <button>Start Shopping</button>
+  </section>
+
+  <section class="categories">
+    <div class="category">
+      <img src="https://via.placeholder.com/150" alt="Fashion">
+      <h3>Fashion</h3>
+    </div>
+    <div class="category">
+      <img src="https://via.placeholder.com/150" alt="Electronics">
+      <h3>Electronics</h3>
+    </div>
+    <div class="category">
+      <img src="https://via.placeholder.com/150" alt="Home">
+      <h3>Home & Living</h3>
+    </div>
   </section>
 
   <section class="products">
     <div class="product">
       <img src="https://via.placeholder.com/250" alt="Product 1">
-      <h3>Product 1</h3>
-      <p>$29.99</p>
+      <h3>Smart Watch</h3>
+      <p>$99.99</p>
       <button>Add to Cart</button>
     </div>
     <div class="product">
       <img src="https://via.placeholder.com/250" alt="Product 2">
-      <h3>Product 2</h3>
-      <p>$49.99</p>
+      <h3>Wireless Headphones</h3>
+      <p>$149.99</p>
       <button>Add to Cart</button>
     </div>
     <div class="product">
       <img src="https://via.placeholder.com/250" alt="Product 3">
-      <h3>Product 3</h3>
-      <p>$19.99</p>
+      <h3>Designer Bag</h3>
+      <p>$199.99</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product">
+      <img src="https://via.placeholder.com/250" alt="Product 4">
+      <h3>Gaming Console</h3>
+      <p>$299.99</p>
       <button>Add to Cart</button>
     </div>
   </section>
 
+  <section class="testimonials">
+    <h2>What Our Customers Say</h2>
+    <div class="testimonial">"ShopSphere has the best deals and amazing customer service!" – Alex</div>
+    <div class="testimonial">"I love the variety of products. Highly recommended!" – Priya</div>
+  </section>
+
+  <section class="newsletter">
+    <h2>Stay Updated</h2>
+    <p>Subscribe to our newsletter for exclusive offers.</p>
+    <form>
+      <input type="email" placeholder="Enter your email">
+      <button type="submit">Subscribe</button>
+    </form>
+  </section>
+
   <footer>
-    <p>&copy; 2025 ShopEase. All rights reserved.</p>
+    <p>&copy; 2025 ShopSphere. All rights reserved.</p>
   </footer>
 </body>
 </html>
